--- a/skills.html
+++ b/skills.html
@@ -1,68 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer portfolio</title>
-    <link rel="stylesheet" href="./css/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Freelancer portfolio</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    <nav class="nav">
-        <div class="container">
-            <div class="nav-row">
-                <a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
+  <nav class="nav">
+    <div class="container">
+      <div class="nav-row">
+        <a href="./index.html" class="logo">
+          <span>YJ</span>
+          Yakup Jorayev
+        </a>
 
-                <button class="dark-mode-btn">
-                    <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
-                    <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
-                </button>
+        <button class="dark-mode-btn">
+          <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
+          <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
+        </button>
 
-                <ul class="nav-list">
-                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Projects</a></li>
-                    <li class="nav-list__item"><a href="./skills.html" class="nav-list__link nav-list__link--active">Skills</a></li>
-                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Contacts</a></li>
-                </ul>
-            </div>
+        <ul class="nav-list">
+          <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Projects</a></li>
+          <li class="nav-list__item"><a href="./skills.html" class="nav-list__link nav-list__link--active">Skills</a>
+          </li>
+          <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Contacts</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="section skills">
+    <div class="container">
+      <h1 class="title-1 skills__title">Skills</h1>
+
+
+      <div class="skills__body">
+        <ul class="skills__list">
+          <li class="skills__item">
+            <h2 class="title-2 skills__item-title">
+              <span class="skills__item-icon">
+                <svg width="392.187px" height="392.187px" viewBox="0 0 392.187 392.187"
+                  style="enable-background:new 0 0 392.187 392.187;" xml:space="preserve">
+                  <g>
+                    <g>
+                      <g>
+                        <path
+                          d="M368.623,17.953H23.568C10.573,17.953,0,28.525,0,41.521v309.145c0,12.996,10.573,23.568,23.568,23.568h345.055
+            c12.992,0,23.563-10.572,23.563-23.568V41.521C392.188,28.526,381.617,17.953,368.623,17.953z M297.561,57.529
+            c0-4.806,3.896-8.702,8.701-8.702h8.703c4.808,0,8.701,3.896,8.701,8.702v9.863c0,4.806-3.896,8.702-8.701,8.702h-8.703
+            c-4.805,0-8.701-3.896-8.701-8.702V57.529z M257.094,57.529c0-4.806,3.898-8.702,8.703-8.702h8.701
+            c4.807,0,8.703,3.896,8.703,8.702v9.863c0,4.806-3.896,8.702-8.703,8.702h-8.701c-4.805,0-8.703-3.896-8.703-8.702V57.529z
+             M363.904,345.953H28.283V102.236h335.621V345.953z M364.135,67.392c0,4.806-3.897,8.702-8.703,8.702h-8.7
+            c-4.808,0-8.703-3.896-8.703-8.702v-9.863c0-4.806,3.896-8.702,8.703-8.702h8.7c4.806,0,8.703,3.896,8.703,8.702V67.392z" />
+                        <path d="M108.363,259.589c12.829,10.133,25.927,18.229,38.928,24.051c16.518,7.402,32.938,11.154,48.803,11.154
+            c15.865,0,32.287-3.752,48.803-11.154c13.001-5.82,26.099-13.918,38.929-24.051c21.715-17.149,35.106-34.137,35.666-34.851
+            c2.137-2.729,2.137-6.565,0-9.295c-0.56-0.714-13.951-17.699-35.666-34.85c-12.83-10.133-25.928-18.229-38.929-24.052
+            c-16.52-7.401-32.938-11.154-48.803-11.154c-15.865,0-32.286,3.753-48.803,11.154c-13.001,5.822-26.099,13.919-38.928,24.052
+            c-21.716,17.15-35.109,34.136-35.667,34.85c-2.136,2.729-2.136,6.564,0,9.295C73.254,225.453,86.647,242.439,108.363,259.589z
+             M196.094,176.686c21.843,0,39.548,17.71,39.548,39.548c0,21.845-17.704,39.549-39.548,39.549
+            c-21.843,0-39.548-17.704-39.548-39.549C156.546,194.396,174.251,176.686,196.094,176.686z" />
+                      </g>
+                    </g>
+                  </g>
+
+                </svg>
+              </span>
+              Quality <span class="skills__item-title--blue">Services</span>
+            </h2>
+          </li>
+
+          <li class="skills__item">
+            Layout from Figma, PSD, Adobe XD, Zeplin
+          </li>
+
+          <li class="skills__item">
+            Animation of elements, transitions (CSS/JS/libraries)
+          </li>
+
+          <li class="skills__item">
+            Animation of elements, transitions (CSS/JS/libraries)
+          </li>
+
+          <li class="skills__item">
+            Content, site support
+          </li>
+        </ul>
+
+        <ul class="skills__list">
+          <li class="skills__item">
+            <h2 class="title-2 skills__item-title">
+              <span class="skills__item-icon">
+                <svg width="419.931px" height="419.931px" viewBox="0 0 419.931 419.931"
+                  style="enable-background:new 0 0 419.931 419.931;" xml:space="preserve">
+                  <g>
+                    <g>
+                      <g>
+                        <path
+                          d="M282.895,352.367c-2.176-1.324-4.072-3.099-5.579-5.25c-0.696-0.992-1.284-2.041-1.771-3.125H28.282V100.276h335.624
+                v159.138c7.165,0.647,13.177,5.353,15.701,11.797c2.235-1.225,4.726-1.982,7.344-2.213c1.771-0.154,3.53-0.044,5.236,0.293
+                V39.561c0-12.996-10.571-23.569-23.566-23.569H23.568C10.573,15.992,0,26.565,0,39.561v309.146
+                c0,12.996,10.573,23.568,23.568,23.568h257.179c-2.007-4.064-2.483-8.652-1.302-13.066
+                C280.126,356.67,281.304,354.354,282.895,352.367z M338.025,55.569c0-4.806,3.896-8.703,8.702-8.703h8.702
+                c4.807,0,8.702,3.896,8.702,8.703v9.863c0,4.806-3.896,8.702-8.702,8.702h-8.702c-4.807,0-8.702-3.896-8.702-8.702V55.569z
+                 M297.56,55.569c0-4.806,3.896-8.703,8.702-8.703h8.703c4.807,0,8.702,3.896,8.702,8.703v9.863c0,4.806-3.896,8.702-8.702,8.702
+                h-8.703c-4.806,0-8.702-3.896-8.702-8.702V55.569z M257.094,55.569c0-4.806,3.897-8.703,8.702-8.703h8.702
+                c4.807,0,8.703,3.896,8.703,8.703v9.863c0,4.806-3.896,8.702-8.703,8.702h-8.702c-4.805,0-8.702-3.896-8.702-8.702V55.569z" />
+                        <path
+                          d="M419.875,335.77l-2.615-14.83c-0.353-1.997-2.256-3.331-4.255-2.979l-13.188,2.324c-1.583-3.715-3.605-7.195-6.005-10.38
+                l8.614-10.268c0.626-0.744,0.931-1.709,0.847-2.68c-0.086-0.971-0.554-1.867-1.3-2.494l-11.534-9.68
+                c-0.746-0.626-1.713-0.93-2.683-0.845c-0.971,0.085-1.867,0.552-2.493,1.298l-8.606,10.26c-3.533-1.8-7.312-3.188-11.271-4.104
+                v-13.392c0-2.028-1.645-3.674-3.673-3.674h-15.06c-2.027,0-3.673,1.646-3.673,3.674v13.392
+                c-3.961,0.915-7.736,2.304-11.271,4.104l-8.608-10.259c-1.304-1.554-3.62-1.756-5.175-0.453l-11.535,9.679
+                c-0.746,0.627-1.213,1.523-1.299,2.494c-0.084,0.971,0.22,1.937,0.846,2.683l8.615,10.266c-2.396,3.184-4.422,6.666-6.005,10.38
+                l-13.188-2.325c-1.994-0.351-3.901,0.982-4.255,2.979l-2.614,14.83c-0.169,0.959,0.05,1.945,0.607,2.744
+                c0.561,0.799,1.41,1.342,2.37,1.511l13.198,2.326c0.215,4.089,0.927,8.045,2.073,11.812l-11.6,6.695
+                c-0.844,0.485-1.459,1.289-1.712,2.229c-0.252,0.941-0.119,1.943,0.367,2.787l7.529,13.041c0.485,0.844,1.289,1.459,2.229,1.711
+                c0.313,0.084,0.632,0.125,0.951,0.125c0.639,0,1.272-0.166,1.836-0.492l11.609-6.703c2.73,2.925,5.812,5.517,9.18,7.709
+                l-4.584,12.593c-0.332,0.916-0.289,1.926,0.123,2.809s1.157,1.566,2.072,1.898l14.148,5.149c0.406,0.148,0.832,0.224,1.257,0.224
+                c0.53,0,1.063-0.115,1.554-0.345c0.883-0.411,1.564-1.157,1.897-2.073l4.583-12.593c1.965,0.238,3.965,0.361,5.994,0.361
+                s4.029-0.125,5.994-0.361l4.584,12.593c0.332,0.916,1.016,1.662,1.897,2.073c0.49,0.229,1.021,0.345,1.554,0.345
+                c0.424,0,0.85-0.074,1.256-0.224l14.15-5.149c0.913-0.332,1.659-1.017,2.07-1.898c0.412-0.883,0.456-1.893,0.123-2.809
+                l-4.584-12.591c3.365-2.192,6.447-4.786,9.18-7.709l11.609,6.703c0.563,0.324,1.197,0.492,1.836,0.492
+                c0.318,0,0.64-0.043,0.951-0.125c0.941-0.252,1.743-0.869,2.229-1.711l7.529-13.043c0.486-0.842,0.619-1.846,0.367-2.787
+                c-0.253-0.938-0.868-1.742-1.712-2.229l-11.598-6.693c1.146-3.768,1.856-7.724,2.071-11.812l13.198-2.327
+                c0.96-0.169,1.812-0.712,2.37-1.511C419.825,337.715,420.044,336.729,419.875,335.77z M354.184,359.336
+                c-11.155,0-20.2-9.045-20.2-20.201s9.046-20.2,20.2-20.2c11.156,0,20.201,9.044,20.201,20.2S365.34,359.336,354.184,359.336z" />
+                        <g>
+                          <path d="M164.695,235.373c0-4.752-2.785-9.117-7.096-11.119l-39.455-18.332l39.456-18.334c4.31-2.004,7.095-6.368,7.095-11.118
+                  v-0.319c0-4.21-2.119-8.075-5.665-10.334c-1.962-1.253-4.247-1.916-6.606-1.916c-1.778,0-3.563,0.391-5.16,1.133l-63.078,29.333
+                  c-4.309,2.004-7.092,6.368-7.092,11.117v0.877c0,4.743,2.782,9.104,7.093,11.118l63.084,29.336
+                  c1.631,0.755,3.368,1.138,5.162,1.138c2.338,0,4.616-0.664,6.597-1.924c3.548-2.268,5.666-6.13,5.666-10.335L164.695,235.373
+                  L164.695,235.373z" />
+                          <path d="M226.932,134.012c-2.301-3.15-6.002-5.03-9.901-5.03h-0.314c-5.354,0-10.048,3.425-11.679,8.516L163.478,266.27
+                  c-1.183,3.718-0.517,7.813,1.781,10.962c2.301,3.148,6.002,5.029,9.901,5.029h0.315c5.352,0,10.043-3.426,11.672-8.516
+                  l41.555-128.762C229.896,141.268,229.234,137.167,226.932,134.012z" />
+                          <path d="M308.001,194.366l-63.079-29.333c-1.592-0.74-3.374-1.131-5.152-1.131c-2.358,0-4.644,0.661-6.605,1.912
+                  c-3.552,2.263-5.671,6.127-5.671,10.337v0.319c0,4.746,2.783,9.111,7.097,11.123l39.454,18.33l-39.455,18.331
+                  c-4.311,2.002-7.096,6.367-7.096,11.119v0.321c0,4.205,2.119,8.066,5.669,10.336c1.974,1.258,4.254,1.923,6.595,1.923
+                  c1.792,0,3.527-0.383,5.169-1.141l63.082-29.336c4.307-2.009,7.088-6.371,7.088-11.114v-0.877
+                  C315.094,200.735,312.311,196.371,308.001,194.366z" />
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+
+                </svg>
+              </span>
+              Knowledge, <span class="skills__item-title--blue">skills:</span>
+            </h2>
+          </li>
+
+          <li class="skills__item">
+            BEM/HTML5/CSS3
+          </li>
+
+          <li class="skills__item">
+            SASS/SCSS
+          </li>
+
+          <li class="skills__item">
+            Flexbox/Grid
+          </li>
+
+          <li class="skills__item">
+            gulp/git
+          </li>
+
+          <li class="skills__item">
+            JavaScript, jQuery
+          </li>
+
+          <li class="skills__item">
+            Responsive/Parallax scrolling
+          </li>
+
+          <li class="skills__item">
+            Neat, logical, thoughtful code.
+          </li>
+
+          <li class="skills__item">
+            Including custom fonts (@font-face, google web fonts)
+          </li>
+
+          <li class="skills__item">
+            Icon font
+          </li>
+
+          <li class="skills__item">
+            Pixel Perfect
+          </li>
+
+        </ul>
+      </div>
+
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <ul class="social">
+          <li class="social__item"><a href="#!"><img src="./img/icons/vk.svg" alt="Link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/instagram.svg" alt="Link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/twitter.svg" alt="Link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/gitHub.svg" alt="Link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
+        </ul>
+        <div class="copyright">
+          <p>© 2022 frontend-dev.com</p>
         </div>
-    </nav>
+      </div>
+    </div>
+  </footer>
 
-    <main class="section">
-        <div class="container">
-                <h1 class="title-1">Skills</h1>
-
-                <ul class="content-list">
-                    <li class="content-list__item">
-                        <h2 class="title-2">Frontend</h2>
-                        <p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, MaterialUI, Yarn, TailwindCSS, StyledComponents</p>
-                    </li>
-                    <li class="content-list__item">
-                        <h2 class="title-2">Backend</h2>
-                        <p>NodeJS, MySQL, MongoDB, PHP, Laravel</p>
-                    </li>
-                </ul>
-
-        </div>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__wrapper">
-                <ul class="social">
-                    <li class="social__item"><a href="#!"><img src="./img/icons/vk.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/instagram.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/twitter.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/gitHub.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
-                </ul>
-                <div class="copyright">
-                    <p>© 2022 frontend-dev.com</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script src="./js/main.js"></script>
+  <script src="./js/main.js"></script>
 
 </body>
+
 </html>
